Overflow bug fix

--- a/css/Pages/_menus.scss
+++ b/css/Pages/_menus.scss
@@ -19,11 +19,10 @@
 .menu {
     background: $primary-bg-color;
     display: grid;
-    width: 96%;
+    width: 100%;
     margin: auto;
     margin-top: -20px;
     padding-bottom: 40px;
-    padding-left: 4%;
     gap: 40px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
@@ -53,8 +52,9 @@
     }
 
     .course {
+        width: 90%;
         display: grid;
-        margin: 0% 4%;
+        margin: auto;
         gap: 12px;
         
         &-option {
@@ -80,7 +80,7 @@
         align-items: center;
         padding: 15px;
         height: 42px;
-        width: 90%;
+        /*width: calc(100% - 20px);*/
         border-radius: 20px;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, .15);
         overflow: hidden;
